base/core/Nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: kraftnetes-core-nodeport
  namespace: kraftnetes
spec:
  selector:
    app: kraftnetes-core
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30000
  type: NodePort
